// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<VanDetailsPage /> renders correctly with data 1`] = `
Array [
  <div
    className="pdp--content"
  >
    <nav>
      <ol
        className="breadcrumb"
      >
        <li
          className="breadcrumb-item -parent"
        >
          <a
            className="link breadcrumb-item--backlink -teal -small -plain"
            href="/"
          >
            Back to 
            Home
            <i
              className="icon -medium -xsmall"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="328 112 184 256 328 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "round",
                      "strokeLinejoin": "round",
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
          </a>
          <a
            className="link breadcrumb-item--parent -teal -small -plain"
            href="/"
          >
            Home
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-a
              </title>
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumb-item -parent"
        >
          <a
            className="link breadcrumb-item--backlink -teal -small -plain"
            href="/"
          >
            Back to 
            Mercedes
            <i
              className="icon -medium -xsmall"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="328 112 184 256 328 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "round",
                      "strokeLinejoin": "round",
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
          </a>
          <a
            className="link breadcrumb-item--parent -teal -small -plain"
            href="/"
          >
            Mercedes
          </a>
          <i
            className="icon -medium -xsmall"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-a
              </title>
              <polyline
                points="184 112 328 256 184 400"
                style={
                  Object {
                    "fill": "none",
                    "stroke": "var(--class-color)",
                    "strokeLinecap": "round",
                    "strokeLinejoin": "round",
                    "strokeWidth": 48,
                  }
                }
              />
            </svg>
          </i>
        </li>
        <li
          className="breadcrumb-item -child"
        >
          <span
            className="text breadcrumb-item--child -small -darker"
          >
            Benz
          </span>
        </li>
      </ol>
    </nav>
    <span
      className="heading -pt-100 -black -xlarge"
    >
      Mercedes-Benz undefined
    </span>
    <span
      className="text -lead -darker"
    >
      C200 Amg Line Premium 2 Doors 9g-Tronic
    </span>
    <div
      className="-mt-500 -mb-200"
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
        }
      }
    >
      <div
        className="rating -regular -orange"
      >
        <span>
          <i
            className="icon -orange"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-e
              </title>
              <path
                d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
              />
            </svg>
          </i>
        </span>
        <span>
          <i
            className="icon -orange"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-e
              </title>
              <path
                d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
              />
            </svg>
          </i>
        </span>
        <span>
          <i
            className="icon -orange"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-e
              </title>
              <path
                d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
              />
            </svg>
          </i>
        </span>
        <span>
          <i
            className="icon -orange"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-e
              </title>
              <path
                d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7Z"
              />
            </svg>
          </i>
        </span>
        <span>
          <i
            className="icon -orange"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-e
              </title>
              <path
                d="M496,203.3H312.36L256,32,199.64,203.3H16L166.21,308.7,107.71,480,256,373.84,404.29,480,345.68,308.7ZM274.63,347.82,256,334.49V134.39l26,78.91,7.24,22H394.63l-67.32,47.2-19.69,13.81,7.78,22.75,26.26,76.75Z"
              />
            </svg>
          </i>
        </span>
        <span
          className="text -regular -dark"
        >
          4.7
        </span>
      </div>
    </div>
    <nav
      className="pdp--flag"
    >
      <div>
        <span>
          
        </span>
      </div>
      <div>
        <i
          className="icon"
        >
          <i
            className="icon -white"
          >
            <svg
              height="1em"
              viewBox="0 0 512 512"
              width="1em"
            >
              <title>
                ionicons-v5-m
              </title>
              <path
                d="M394.23,197.56a300.43,300.43,0,0,0-53.37-90C301.2,61.65,249.05,32,208,32a16,16,0,0,0-15.48,20c13.87,53-14.88,97.07-45.31,143.72C122,234.36,96,274.27,96,320c0,88.22,71.78,160,160,160s160-71.78,160-160C416,276.7,408.68,235.51,394.23,197.56ZM288.33,418.69C278,429.69,265.05,432,256,432s-22-2.31-32.33-13.31S208,390.24,208,368c0-25.14,8.82-44.28,17.34-62.78,4.95-10.74,10-21.67,13-33.37a8,8,0,0,1,12.49-4.51A126.48,126.48,0,0,1,275,292c18.17,24,29,52.42,29,76C304,390.24,298.58,407.77,288.33,418.69Z"
              />
            </svg>
          </i>
        </i>
        <span>
          Hot Deal
        </span>
      </div>
    </nav>
    <div
      className="tabs-wrap"
    >
      <div
        className="tabs__panel -pt-000"
      >
        <div
          aria-labelledby="tab:1-1"
          className="tabs--active"
          hidden={false}
          id="panel:1-1"
          role="tabpanel"
        >
          <div
            className="media-gallery"
            style={
              Object {
                "--x": 0,
                "--y": 0,
              }
            }
          >
            <div
              className="media-gallery--x-scroll"
            >
              <div
                className="media-gallery--x-track"
              >
                <div
                  className="media-gallery--x-track-item -active"
                >
                  <div
                    className="image -expand -plain"
                  >
                    <img
                      className="image--native"
                      src="https://res.cloudinary.com/diun8mklf/image/upload/v1581538983/cars/PeugeotRifter0718_7_lqteyc.jpg"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--x-track-item"
                >
                  <div
                    className="image -expand -plain"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--x-track-item"
                >
                  <div
                    className="image -expand -plain"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--x-track-item"
                >
                  <div
                    className="image -expand -plain"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--x-track-item"
                >
                  <div
                    className="image -expand -plain"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--x-track-item"
                >
                  <div
                    className="image -expand -plain"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
              </div>
              <nav
                className="media-gallery--x-scroll-nav"
              >
                <button
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    className="icon md hydrated -orange -lead"
                  >
                    <svg
                      height="1em"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <title>
                        ionicons-v5-b
                      </title>
                      <path
                        d="M256,48C141.13,48,48,141.13,48,256s93.13,208,208,208,208-93.13,208-208S370.87,48,256,48Zm62.63,304L296,374.63,177.37,256,296,137.37,318.63,160l-96,96Z"
                      />
                    </svg>
                  </i>
                </button>
                <button
                  onClick={[Function]}
                  type="button"
                >
                  <i
                    className="icon md hydrated -orange -lead"
                  >
                    <svg
                      height="1em"
                      viewBox="0 0 512 512"
                      width="1em"
                    >
                      <title>
                        ionicons-v5-b
                      </title>
                      <path
                        d="M256,48C141.13,48,48,141.13,48,256s93.13,208,208,208,208-93.13,208-208S370.87,48,256,48ZM216,374.63,193.37,352l96-96-96-96L216,137.37,334.63,256Z"
                      />
                    </svg>
                  </i>
                </button>
              </nav>
            </div>
            <div
              className="media-gallery--y-scroll"
            >
              <div
                className="media-gallery--y-track"
              >
                <div
                  className="media-gallery--y-track-item -active"
                  onClick={[Function]}
                  role="list"
                >
                  <div
                    className="image -xlarge"
                  >
                    <img
                      className="image--native"
                      src="https://res.cloudinary.com/diun8mklf/image/upload/v1581538983/cars/PeugeotRifter0718_7_lqteyc.jpg"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--y-track-item"
                  onClick={[Function]}
                  role="list"
                >
                  <div
                    className="image -xlarge"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--y-track-item"
                  onClick={[Function]}
                  role="list"
                >
                  <div
                    className="image -xlarge"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--y-track-item"
                  onClick={[Function]}
                  role="list"
                >
                  <div
                    className="image -xlarge"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--y-track-item"
                  onClick={[Function]}
                  role="list"
                >
                  <div
                    className="image -xlarge"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
                <div
                  className="media-gallery--y-track-item"
                  onClick={[Function]}
                  role="list"
                >
                  <div
                    className="image -xlarge"
                  >
                    <img
                      className="image--native"
                      src="https://source.unsplash.com/collection/2102317/1000x650?sig=403425"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="tab:1-2"
          className=""
          hidden={true}
          id="panel:1-2"
          role="tabpanel"
        >
          <div
            className="media"
          >
            <div
              className=""
              src="https://player.vimeo.com/video/263419265"
              style={
                Object {
                  "height": "360px",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": undefined,
                    "height": "100%",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
        <div
          aria-labelledby="tab:1-3"
          className=""
          hidden={true}
          id="panel:1-3"
          role="tabpanel"
        >
          <div
            className="media"
          >
            <div
              className=""
              src="https://player.vimeo.com/video/263419265"
              style={
                Object {
                  "height": "360px",
                  "width": "100%",
                }
              }
            >
              <div
                style={
                  Object {
                    "display": undefined,
                    "height": "100%",
                    "overflow": "hidden",
                    "width": "100%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
      <nav
        className="tabs -content-end -regular"
      >
        <div
          className="tabs__list-wrap"
        >
          <div
            className="tabs__list"
            role="tablist"
          >
            <button
              aria-controls="panel:1-1"
              aria-selected={true}
              className="-active"
              id="tab:1-1"
              onClick={[Function]}
              role="tab"
              type="button"
            >
              Photos
            </button>
            <button
              aria-controls="panel:1-2"
              aria-selected={false}
              className=""
              id="tab:1-2"
              onClick={[Function]}
              role="tab"
              type="button"
            >
              Videos
            </button>
            <button
              aria-controls="panel:1-3"
              aria-selected={false}
              className=""
              id="tab:1-3"
              onClick={[Function]}
              role="tab"
              type="button"
            >
              360° View
            </button>
          </div>
        </div>
      </nav>
    </div>
    <div
      className="tabs-wrap"
    >
      <nav
        className="tabs -content-end -regular -alt -expand"
      >
        <div
          className="tabs__list-wrap"
        >
          <div
            className="tabs__list"
            role="tablist"
          >
            <button
              aria-controls="panel:2-1"
              aria-selected={true}
              className="-active"
              id="tab:2-1"
              onClick={[Function]}
              role="tab"
              type="button"
            >
              Key Information
            </button>
            <button
              aria-controls="panel:2-2"
              aria-selected={false}
              className=""
              id="tab:2-2"
              onClick={[Function]}
              role="tab"
              type="button"
            >
              Standard Equipment
            </button>
            <button
              aria-controls="panel:2-3"
              aria-selected={false}
              className=""
              id="tab:2-3"
              onClick={[Function]}
              role="tab"
              type="button"
            >
              Technical Specification
            </button>
          </div>
        </div>
      </nav>
      <div
        className="tabs__panel -p-000"
      >
        <div
          aria-labelledby="tab:2-1"
          className="tabs--active"
          hidden={false}
          id="panel:2-1"
          role="tabpanel"
        >
          <p>
            Error: No data
          </p>
        </div>
        <div
          aria-labelledby="tab:2-2"
          className=""
          hidden={true}
          id="panel:2-2"
          role="tabpanel"
        >
          <p>
            Error: No data
          </p>
        </div>
        <div
          aria-labelledby="tab:2-3"
          className=""
          hidden={true}
          id="panel:2-3"
          role="tabpanel"
        >
          <p>
            Error: No data
          </p>
        </div>
      </div>
    </div>
    <div />
    <div
      className="pdp--feature-grid -col2"
    >
      <span
        className="heading -black -lead"
      >
        Why Choose Leasing?
      </span>
      <div
        className="pdp--feature-grid--item"
      >
        <i
          className="icon -orange -xlarge"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <title>
              ionicons-v5-b
            </title>
            <path
              d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 32,
                }
              }
            />
            <path
              d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="135.87 256 159.46 232.4 184.13 256"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="376.13 256 352.54 279.6 327.87 256"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
          </svg>
        </i>
        <div>
          <div
            className="heading -black -regular"
          >
            Brand New Vehicles
          </div>
        </div>
      </div>
      <div
        className="pdp--feature-grid--item"
      >
        <i
          className="icon -orange -xlarge"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <title>
              ionicons-v5-b
            </title>
            <path
              d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 32,
                }
              }
            />
            <path
              d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="135.87 256 159.46 232.4 184.13 256"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="376.13 256 352.54 279.6 327.87 256"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
          </svg>
        </i>
        <div>
          <div
            className="heading -black -regular"
          >
            Fixed Monthly Payments
          </div>
        </div>
      </div>
      <div
        className="pdp--feature-grid--item"
      >
        <i
          className="icon -orange -xlarge"
        >
          <svg
            height="1em"
            viewBox="0 0 512 512"
            width="1em"
          >
            <title>
              ionicons-v5-b
            </title>
            <path
              d="M448,256c0-106-86-192-192-192S64,150,64,256s86,192,192,192S448,362,448,256Z"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeMiterlimit": 10,
                  "strokeWidth": 32,
                }
              }
            />
            <path
              d="M351.82,271.87v-16A96.15,96.15,0,0,0,184.09,192m-24.2,48.17v16A96.22,96.22,0,0,0,327.81,320"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="135.87 256 159.46 232.4 184.13 256"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
            <polyline
              points="376.13 256 352.54 279.6 327.87 256"
              style={
                Object {
                  "fill": "none",
                  "stroke": "var(--class-color)",
                  "strokeLinecap": "round",
                  "strokeLinejoin": "round",
                  "strokeWidth": 32,
                }
              }
            />
          </svg>
        </i>
        <div>
          <div
            className="heading -black -regular"
          >
            No MOT Costs
          </div>
        </div>
      </div>
    </div>
    <div
      className="tile--accordion"
    >
      <p
        className="heading pdp-section-title -black -lead"
      >
        Why Choose Vanarama?
      </p>
      <ul
        className="accordion"
      >
        <li
          className="accordion-item"
          data-testid="accordion-item"
        >
          <button
            className="accordion--heading"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon accordion-item--chevron"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="184 112 328 256 184 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "square",
                      "strokeMiterlimit": 10,
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            <div
              className="accordion--title"
            >
              <span
                className="text -regular -black"
              >
                FREE Nationwide Delivery
              </span>
            </div>
          </button>
          <div
            className="accordion--content"
          >
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur incidunt at officiis quibusdam officia nam delectus doloremque perspiciatis! Accusantium eaque, ipsam harum voluptatibus eveniet necessitatibus.
          </div>
        </li>
        <li
          className="accordion-item"
          data-testid="accordion-item"
        >
          <button
            className="accordion--heading"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon accordion-item--chevron"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="184 112 328 256 184 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "square",
                      "strokeMiterlimit": 10,
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            <div
              className="accordion--title"
            >
              <span
                className="text -regular -black"
              >
                FREE 30-Day Returns*
              </span>
            </div>
          </button>
          <div
            className="accordion--content"
          >
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur incidunt at officiis quibusdam officia nam delectus doloremque perspiciatis! Accusantium eaque, ipsam harum voluptatibus eveniet necessitatibus.
          </div>
        </li>
        <li
          className="accordion-item"
          data-testid="accordion-item"
        >
          <button
            className="accordion--heading"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon accordion-item--chevron"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="184 112 328 256 184 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "square",
                      "strokeMiterlimit": 10,
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            <div
              className="accordion--title"
            >
              <span
                className="text -regular -black"
              >
                No Admin Fees
              </span>
            </div>
          </button>
          <div
            className="accordion--content"
          >
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur incidunt at officiis quibusdam officia nam delectus doloremque perspiciatis! Accusantium eaque, ipsam harum voluptatibus eveniet necessitatibus.
          </div>
        </li>
        <li
          className="accordion-item"
          data-testid="accordion-item"
        >
          <button
            className="accordion--heading"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon accordion-item--chevron"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="184 112 328 256 184 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "square",
                      "strokeMiterlimit": 10,
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            <div
              className="accordion--title"
            >
              <span
                className="text -regular -black"
              >
                Up To £500 Damage Cover*
              </span>
            </div>
          </button>
          <div
            className="accordion--content"
          >
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur incidunt at officiis quibusdam officia nam delectus doloremque perspiciatis! Accusantium eaque, ipsam harum voluptatibus eveniet necessitatibus.
          </div>
        </li>
        <li
          className="accordion-item"
          data-testid="accordion-item"
        >
          <button
            className="accordion--heading"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon accordion-item--chevron"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="184 112 328 256 184 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "square",
                      "strokeMiterlimit": 10,
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            <div
              className="accordion--title"
            >
              <span
                className="text -regular -black"
              >
                We’ll Cover 10% Mileage Excess*
              </span>
            </div>
          </button>
          <div
            className="accordion--content"
          >
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur incidunt at officiis quibusdam officia nam delectus doloremque perspiciatis! Accusantium eaque, ipsam harum voluptatibus eveniet necessitatibus.
          </div>
        </li>
        <li
          className="accordion-item"
          data-testid="accordion-item"
        >
          <button
            className="accordion--heading"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon accordion-item--chevron"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="184 112 328 256 184 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "square",
                      "strokeMiterlimit": 10,
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            <div
              className="accordion--title"
            >
              <span
                className="text -regular -black"
              >
                4.5 Trustpilot Score
              </span>
            </div>
          </button>
          <div
            className="accordion--content"
          >
            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Aspernatur incidunt at officiis quibusdam officia nam delectus doloremque perspiciatis! Accusantium eaque, ipsam harum voluptatibus eveniet necessitatibus.
          </div>
        </li>
      </ul>
    </div>
    <div
      className="pdp--reviews"
    />
    <div
      className="tile--accordion"
    >
      <p
        className="heading pdp-section-question -black -lead"
      >
        Frequently Asked Questions
      </p>
      <ul
        className="accordion"
      >
        <li
          className="accordion-item"
          data-testid="accordion-item"
        >
          <button
            className="accordion--heading"
            onClick={[Function]}
            type="button"
          >
            <i
              className="icon accordion-item--chevron"
            >
              <svg
                height="1em"
                viewBox="0 0 512 512"
                width="1em"
              >
                <title>
                  ionicons-v5-a
                </title>
                <polyline
                  points="184 112 328 256 184 400"
                  style={
                    Object {
                      "fill": "none",
                      "stroke": "var(--class-color)",
                      "strokeLinecap": "square",
                      "strokeMiterlimit": 10,
                      "strokeWidth": 48,
                    }
                  }
                />
              </svg>
            </i>
            <div
              className="accordion--title"
            >
              <span
                className="text -regular -black"
              >
                General Leasing FAQs
              </span>
            </div>
          </button>
          <div
            className="accordion--content"
          >
            <div
              className="pdp--qanda"
            >
              <div
                className="heading pdp--qanda-q -black -regular"
              >
                How Long Will My Vehicle Delivery Take?
              </div>
              <div
                className="text pdp--qanda-a -regular -darker"
              >
                Delivery time really depends on several factors, including the vehicle you choose, whether it's in stock & if you're having accessories fitted. If your vehicle is in stock, available & already kitted out the way you want it, it could take as little as 2-3 weeks to be delivered.
              </div>
            </div>
            <div
              className="pdp--qanda"
            >
              <div
                className="heading pdp--qanda-q -black -regular"
              >
                Can I Lease A Vehicle With Bad Credit?
              </div>
              <div
                className="text pdp--qanda-a -regular -darker"
              >
                Leasing is a form of vehicle finance or credit, which means funders will look into your credit history when you apply to lease. If you’ve missed payments or cancelled finance in the past, these can negatively impact your credit score. Vanarama works with more than 10 potential funders & we’ll always try to match you with a funder to suit your needs.
              </div>
            </div>
            <div
              className="pdp--qanda"
            >
              <div
                className="heading pdp--qanda-q -black -regular"
              >
                Can I Cancel A Lease Part Way Through?
              </div>
              <div
                className="text pdp--qanda-a -regular -darker"
              >
                A lease contract can be cancelled by requesting an early termination. If you request this, the vehicle must be returned to the funder & you’ll pay a penalty fee - the amount varies depending on the funder & the type of lease agreement you have, but it could be more than 50% of all remaining payments. If you lease a car with us, you will be covered by Redundancy Protection. This means if due to an unexpected life event you are suddenly unable to afford your payments, we may be able to help. See more about this here.
              </div>
            </div>
            <div
              className="pdp--qanda"
            >
              <div
                className="heading pdp--qanda-q -black -regular"
              >
                Which Businesses Can Lease Vehicles?
              </div>
              <div
                className="text pdp--qanda-a -regular -darker"
              >
                In general, any business can lease a vehicle & benefit from the cost savings leasing offers - even new businesses. 
              </div>
            </div>
            <div
              className="pdp--qanda"
            >
              <div
                className="heading pdp--qanda-q -black -regular"
              >
                Can I Change My Annual Mileage Limit Mid-Contract?
              </div>
              <div
                className="text pdp--qanda-a -regular -darker"
              >
                Yes, although the process will depend on which funder your lease is with & if you are eligible to do so. If you think your mileage limit needs changing, call us straight away so we can discuss your options.
              </div>
            </div>
            <div
              className="pdp--qanda"
            >
              <div
                className="heading pdp--qanda-q -black -regular"
              >
                What Is The Shortest Lease Contract I Can Take?
              </div>
              <div
                className="text pdp--qanda-a -regular -darker"
              >
                The shortest lease term available from Vanarama is 2 years, up to a maximum term of 5 years. 
              </div>
            </div>
            <div
              className="pdp--qanda"
            >
              <div
                className="heading pdp--qanda-q -black -regular"
              >
                How Does Fair Wear & Tear Work?
              </div>
              <div
                className="text pdp--qanda-a -regular -darker"
              >
                If your lease contract requires you to hand your vehicle back at the end, it will be inspected by the finance company for any damage that isn’t considered ‘fair wear & tear’. The odd bump, scratch or scuff is fine - after all, you could have been driving this vehicle for up to 5 years - excessive damage is not & penalties are often charged to repair it. 
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>,
  <div
    className="pdp--sidebar"
  >
    <div
      style={
        Object {
          "display": "flex",
          "justifyContent": "space-between",
        }
      }
    >
      <div>
        <span
          className="heading -black -small"
        >
          FACTORY ORDER
        </span>
        <span
          className="text -small -darker"
        >
          Availability: 12 Weeks (Avg)
        </span>
      </div>
      <div>
        <div
          className="price -xlarge -black"
        >
          POA
        </div>
      </div>
    </div>
    <form
      className="form"
      data-testid="goldrush-form"
      onSubmit={[Function]}
    >
      <span
        className="heading -black -lead"
      >
        Get Your Quote Now
      </span>
      <div
        className="formgroup"
      >
        <label
          className="formgroup--legend"
          htmlFor="goldrush-form_full-name"
        >
          Full Name
        </label>
        <div
          className="formgroup--content"
        >
          <div
            className="textinput regular"
          >
            <input
              className="textinput--native regular"
              data-testid="goldrush-form_full-name"
              id="goldrush-form_full-name"
              name="fullName"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="formgroup"
      >
        <label
          className="formgroup--legend"
          htmlFor="goldrush-form_email"
        >
          Email Address
        </label>
        <div
          className="formgroup--content"
        >
          <div
            className="textinput regular"
          >
            <input
              className="textinput--native regular"
              data-testid="goldrush-form_email"
              id="goldrush-form_email"
              name="email"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="formgroup"
      >
        <label
          className="formgroup--legend"
          htmlFor="goldrush-form_phone-number"
        >
          Phone Number
        </label>
        <div
          className="formgroup--content"
        >
          <div
            className="textinput regular"
          >
            <input
              className="textinput--native regular"
              data-testid="goldrush-form_phone-number"
              id="goldrush-form_phone-number"
              name="phoneNumber"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="formgroup"
      >
        <label
          className="formgroup--legend"
          htmlFor="goldrush-form_postcode"
        >
          Postcode
        </label>
        <div
          className="formgroup--content"
        >
          <div
            className="textinput regular"
          >
            <input
              className="textinput--native regular"
              data-testid="goldrush-form_postcode"
              id="goldrush-form_postcode"
              name="postcode"
              type="text"
            />
          </div>
        </div>
      </div>
      <div
        className="formgroup"
      >
        <label
          className="formgroup--legend"
        >
          Please Confirm
        </label>
        <div
          className="formgroup--content"
        >
          <div
            className="checkbox -teal"
          >
            <input
              className="checkbox--native"
              data-testid="goldrush-form_marketing-preference"
              id="goldrush-form_marketing-preference"
              name="marketingPreference"
              type="checkbox"
            />
            <label
              className="checkbox--label"
              htmlFor="goldrush-form_marketing-preference"
            >
              <span
                className="text -regular -darker"
              >
                I wish to receive emails and SMS messages for updates on the latest deals, offers and promotions.
              </span>
            </label>
          </div>
        </div>
      </div>
      <p
        className="text -xsmall -darker"
      >
        Terms and conditions agreement text and link 
        <a
          className="link -primary -xsmall -plain"
          data-testid="terms_and_conditions"
          href="#"
        >
          link
        </a>
      </p>
      <button
        className="button -teal -lead -solid"
        data-testid="goldrush-form_submit"
        disabled={false}
        type="submit"
      >
        <div
          className="button--inner"
        >
          Get Quote Now
        </div>
      </button>
    </form>
    <div
      className="pdp--sidebar-promise"
    >
      <span
        className="text -regular -black"
      >
        Lorem ipsum dolor. We’ll beat any lease quote or we'll give you £100. 
      </span>
      <a
        className="link -success -small -plain"
        href="#"
      >
        Terms and Conditions apply.
      </a>
    </div>
  </div>,
  <div />,
]
`;

exports[`<VanDetailsPage /> renders correctly with error 1`] = `
<div
  className="pdp--content"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "minHeight": "40rem",
    }
  }
>
  Error
</div>
`;

exports[`<VanDetailsPage /> renders correctly with loading 1`] = `
<div
  className="pdp--content"
  style={
    Object {
      "alignItems": "center",
      "display": "flex",
      "minHeight": "40rem",
    }
  }
>
  <div
    className="loading -xlarge"
  >
    <svg
      className="loading--svg"
      viewBox="-75 -75 150 150"
    >
      <circle
        className="loading--stroke"
        cx="0"
        cy="0"
        r="37.5"
      />
    </svg>
  </div>
</div>
`;
